service/tests/models/snapshots/orders/checkout_calculates_totals_and_reserves_inventory@orders.snap
---
source: tests/models/orders.rs
expression: "(found, items, remaining_stock)"
---
(
    Order {
        id: ID,
        pid: PID,
        order_number: 11,
        customer_id: ID,
        billing_address_id: Some(
            307,
        ),
        shipping_address_id: Some(
            308,
        ),
        customer_name: "John Doe",
        customer_email: "john.doe@silk.com",
        customer_image: Some(
            "https://randomuser.me/api/portraits/men/32.jpg",
        ),
        billing_address_snapshot: Json(
            Object {
                "pid": String("PID"),
                "city": String("Nairobi"),
                "email": Null,
                "label": Null,
                "phone": Null,
                "region": Null,
                "company": Null,
                "lineOne": String("10 Market Street"),
                "lineTwo": Null,
                "postalCode": Null,
                "addressType": String("billing"),
                "countryCode": String("KE"),
                "recipientName": String("John Doe"),
            },
        ),
        shipping_address_snapshot: Json(
            Object {
                "pid": String("PID"),
                "city": String("Nairobi"),
                "email": Null,
                "label": Null,
                "phone": Null,
                "region": Null,
                "company": Null,
                "lineOne": String("10 Market Street"),
                "lineTwo": Null,
                "postalCode": Null,
                "addressType": String("shipping"),
                "countryCode": String("KE"),
                "recipientName": String("John Doe"),
            },
        ),
        status: "pending",
        payment_status: "pending",
        fulfillment_status: "unfulfilled",
        currency: "USD",
        subtotal: 49.98,
        discount_total: 0,
        shipping_total: 0,
        tax_total: 0,
        grand_total: 49.98,
        customer_note: Some(
            "Leave at the front desk",
        ),
        staff_note: None,
        placed_at: Some(
            DATE,
        ),
        cancelled_at: None,
        completed_at: None,
        created_at: DATE,
        updated_at: DATE,
    },
    [
        OrderItem {
            id: ID,
            pid: PID,
            order_id: ID,
            product_id: Some(
                201,
            ),
            variant_id: Some(
                201,
            ),
            product_pid: PID,
            variant_pid: PID,
            product_name: "Classic Cotton T-shirt",
            sku: "TSHIRT-BLK-M",
            selected_options: Json(
                Object {
                    "size": String("M"),
                    "colour": String("Black"),
                },
            ),
            quantity: 2,
            unit_price: 24.99,
            discount_total: 0,
            tax_total: 0,
            line_total: 49.98,
            created_at: DATE,
            updated_at: DATE,
        },
    ],
    30,
)
