service/tests/models/snapshots/orders/duplicate variant@orders.snap
---
source: tests/models/orders.rs
expression: "(result, order_count)"
---
(
    Err(
        "Each product variant may appear only once per order",
    ),
    10,
)
