service/tests/models/snapshots/orders/empty order@orders.snap
---
source: tests/models/orders.rs
expression: "(result, order_count)"
---
(
    Err(
        "An order must contain at least one item",
    ),
    10,
)
