service/tests/models/snapshots/orders/lists_and_fetches_orders_with_items@orders.snap
---
source: tests/models/orders.rs
expression: "(list, detail)"
---
(
    PaginatedModel {
        data: [
            Order {
                id: ID,
                pid: PID,
                order_number: 2,
                customer_id: ID,
                billing_address_id: Some(
                    302,
                ),
                shipping_address_id: Some(
                    301,
                ),
                customer_name: "John Doe",
                customer_email: "john.doe@acme.com",
                billing_address_snapshot: Json(
                    Object {
                        "pid": String("PID"),
                        "city": String("Nairobi"),
                        "email": String("john.doe@acme.com"),
                        "label": String("Billing"),
                        "phone": String("+254700000011"),
                        "region": String("Nairobi County"),
                        "company": String("Acme Trading"),
                        "lineOne": String("14 Riverside Drive"),
                        "lineTwo": Null,
                        "postalCode": String("00100"),
                        "addressType": String("billing"),
                        "countryCode": String("KE"),
                        "recipientName": String("John Doe"),
                    },
                ),
                shipping_address_snapshot: Json(
                    Object {
                        "pid": String("PID"),
                        "city": String("Nairobi"),
                        "email": String("john.doe@acme.com"),
                        "label": String("Home"),
                        "phone": String("+254700000011"),
                        "region": String("Nairobi County"),
                        "company": Null,
                        "lineOne": String("14 Riverside Drive"),
                        "lineTwo": String("Apartment 4B"),
                        "postalCode": String("00100"),
                        "addressType": String("shipping"),
                        "countryCode": String("KE"),
                        "recipientName": String("John Doe"),
                    },
                ),
                status: "completed",
                payment_status: "paid",
                fulfillment_status: "fulfilled",
                currency: "USD",
                subtotal: 89.99,
                discount_total: 10.00,
                shipping_total: 0,
                tax_total: 8.00,
                grand_total: 87.99,
                customer_note: None,
                staff_note: Some(
                    "Delivered by local courier.",
                ),
                placed_at: Some(
                    DATE,
                ),
                cancelled_at: None,
                completed_at: Some(
                    DATE,
                ),
                created_at: DATE,
                updated_at: DATE,
            },
        ],
        pagination: Pagination {
            page: 1,
            limit: 10,
            total_items: 1,
            total_pages: 1,
            has_next: false,
            has_prev: false,
        },
    },
    OrderWithItems {
        order: Order {
            id: ID,
            pid: PID,
            order_number: 2,
            customer_id: ID,
            billing_address_id: Some(
                302,
            ),
            shipping_address_id: Some(
                301,
            ),
            customer_name: "John Doe",
            customer_email: "john.doe@acme.com",
            billing_address_snapshot: Json(
                Object {
                    "pid": String("PID"),
                    "city": String("Nairobi"),
                    "email": String("john.doe@acme.com"),
                    "label": String("Billing"),
                    "phone": String("+254700000011"),
                    "region": String("Nairobi County"),
                    "company": String("Acme Trading"),
                    "lineOne": String("14 Riverside Drive"),
                    "lineTwo": Null,
                    "postalCode": String("00100"),
                    "addressType": String("billing"),
                    "countryCode": String("KE"),
                    "recipientName": String("John Doe"),
                },
            ),
            shipping_address_snapshot: Json(
                Object {
                    "pid": String("PID"),
                    "city": String("Nairobi"),
                    "email": String("john.doe@acme.com"),
                    "label": String("Home"),
                    "phone": String("+254700000011"),
                    "region": String("Nairobi County"),
                    "company": Null,
                    "lineOne": String("14 Riverside Drive"),
                    "lineTwo": String("Apartment 4B"),
                    "postalCode": String("00100"),
                    "addressType": String("shipping"),
                    "countryCode": String("KE"),
                    "recipientName": String("John Doe"),
                },
            ),
            status: "completed",
            payment_status: "paid",
            fulfillment_status: "fulfilled",
            currency: "USD",
            subtotal: 89.99,
            discount_total: 10.00,
            shipping_total: 0,
            tax_total: 8.00,
            grand_total: 87.99,
            customer_note: None,
            staff_note: Some(
                "Delivered by local courier.",
            ),
            placed_at: Some(
                DATE,
            ),
            cancelled_at: None,
            completed_at: Some(
                DATE,
            ),
            created_at: DATE,
            updated_at: DATE,
        },
        items: [
            OrderItem {
                id: ID,
                pid: PID,
                order_id: ID,
                product_id: Some(
                    203,
                ),
                variant_id: Some(
                    205,
                ),
                product_pid: PID,
                variant_pid: PID,
                product_name: "Court Leather Sneakers",
                sku: "SNEAKER-WHT-42",
                selected_options: Json(
                    Object {
                        "Size": String("42"),
                        "Colour": String("White"),
                    },
                ),
                quantity: 1,
                unit_price: 89.99,
                discount_total: 10.00,
                tax_total: 8.00,
                line_total: 87.99,
                created_at: DATE,
                updated_at: DATE,
            },
        ],
    },
)
