service/tests/models/snapshots/orders/missing variant@orders.snap
---
source: tests/models/orders.rs
expression: "(result, orders_before, orders_after, stock_before, stock_after)"
---
(
    Err(
        "One or more product variants do not exist",
    ),
    10,
    10,
    32,
    32,
)
